--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,svelte,node,yarn,dotenv
 
 ### dotenv ###
-.env
+.env*
 
 ### macOS ###
 # General
