--- a/package.json
+++ b/package.json
@@ -9,34 +9,36 @@
 		"lint": "eslint --max-warnings 0 --fix . && svelte-check"
 	},
 	"dependencies": {
+		"@auth/core": "^0.9.0",
+		"@auth/sveltekit": "^0.3.5",
 		"@sveltejs/kit": "^1.21.0",
 		"@tanstack/svelte-query": "^4.29.19",
+		"@trpc/client": "^10.33.0",
 		"@trpc/server": "^10.33.0",
-		"zod": "^3.21.4",
-		"svelte": "^4.0.3",
 		"devalue": "^4.3.2",
+		"svelte": "^4.0.3",
 		"trpc-svelte-query": "^1.0.2",
-		"@trpc/client": "^10.33.0"
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"prettier-plugin-tailwindcss": "^0.3.0",
-		"autoprefixer": "^10.4.14",
+		"@cloudflare/workers-types": "^4.20230518.0",
 		"@sveltejs/adapter-cloudflare": "^2.3.0",
-		"svelte-preprocess": "^5.0.4",
-		"eslint": "^8.44.0",
-		"eslint-plugin-svelte": "^2.32.2",
-		"eslint-config-prettier": "^8.8.0",
-		"postcss": "^8.4.24",
-		"svelte-check": "^3.4.4",
-		"vite": "^4.3.9",
-		"prettier": "^2.8.8",
-		"tailwindcss": "^3.3.2",
-		"postcss-load-config": "^4.0.1",
-		"prettier-plugin-svelte": "^2.10.1",
 		"@typescript-eslint/eslint-plugin": "^5.61.0",
-		"typescript": "~5.1.6",
-		"eslint-plugin-prettier": "^4.2.1",
 		"@typescript-eslint/parser": "^5.61.0",
-		"@cloudflare/workers-types": "^4.20230518.0"
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.44.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-svelte": "^2.32.2",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"svelte-check": "^3.4.4",
+		"svelte-preprocess": "^5.0.4",
+		"tailwindcss": "^3.3.2",
+		"typescript": "~5.1.6",
+		"vite": "^4.3.9"
 	}
 }
