--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@trpc/client": "^10.33.0",
 		"@trpc/server": "^10.33.0",
 		"devalue": "^4.3.2",
-		"svelte": "3.54.0",
+		"svelte": "^3.55.0",
 		"trpc-svelte-query": "^1.0.2",
 		"zod": "^3.21.4"
 	},
